<resources>
    <string name="additional_system_update" />
    <string name="additional_system_update_menu" />
    <string name="password_to_exit_demo_mode">demomodeexit</string>
    <string name="encrypt_delay_for_setup_activities">com.motorola.blur.setup.HomeActivity,com.motorola.setupwizard.controller.VzwBaseHome</string>
    <string name="batt_capacity_file_name">/sys/bus/platform/devices/mmi-battery.0/capacity</string>
    <string name="batt_capacity_based_model_name" />
    <string name="scan_results_on_summary">Select a network if you would like to connect to Wi-Fi.</string>
    <string name="wifi_available">Wi-Fi available</string>
    <string name="error_saving">Unable to save the network</string>
    <string name="wifi_network_selection">Network Selection</string>
    <string name="wifi_preferred_nw_finder">Preferred Network Finder</string>
    <string name="pref_finder_text">Select a network below to use Wi-Fi or press back key to stay on cellular network. To change the setting press menu key to go to Wi-Fi settings.</string>
    <string name="do_not_use_wifi">Do not use Wi-Fi, remind me later</string>
    <string name="wifi_offload_toggle_title">Notify me</string>
    <string name="wifi_offload_toggle_summary">When launching apps, notify me when Wi-Fi is available.</string>
    <string name="wifi_offload_notify_me_info">To turn Wi-Fi notifications off, go to Wi-Fi settings.</string>
    <string name="input_method_selector_show_automatically_value">0</string>
    <string name="input_method_selector_always_show_value">1</string>
    <string name="input_method_selector_always_hide_value">2</string>
    <string name="input_method_selector_visibility_default_value">0</string>
    <string name="privacy_profile_title">PRIVACY SETTINGS</string>
    <string name="motorola_privacy_policy_title">Experiences and Privacy</string>
    <string name="motorola_privacy_policy_summary">Manage experiences to control your privacy and view our privacy policy</string>
    <string name="phone_vibration_pattern">Phone vibration pattern</string>
    <string name="ok_dismiss">OK</string>
    <string name="battery_saver">Battery Saver</string>
    <string name="battery_saver_key">battery_saver_pref_key</string>
    <string name="battery_saver_off">OFF</string>
    <string name="battery_saver_on">ON</string>
    <string name="battery_saver_message">"Keep going on a low battery.

When your battery is low, we'll automatically restrict background mobile data until you're charging again.

Some apps and services won't work unless you're connected to a Wi-Fi network."</string>
    <string name="hardware_information_ram">RAM size</string>
    <string name="hardware_information_rom">ROM size</string>
    <string name="call_connect_tone_enable_title">Call connect</string>
    <string name="call_connect_tone_enable_summary">Set sound emitted when call is connected</string>
    <string name="network_lost_tone_enable_title">Network lost tone</string>
    <string name="networks_lost_tone_summary">Play tone when network connection is lost</string>
    <string name="enhanced_roaming_tone_enable_title">Roaming tone</string>
    <string name="enhanced_roaming_tone_enable_summary">Set notification tone informing the status of cellular service</string>
    <string name="enhanced_roaming_banner_enable_title">Roaming banner</string>
    <string name="enhanced_roaming_banner_enable_summary">Show notification text informing which system the wireless device is using</string>
    <string name="software_update_alert_title">Software update alert</string>
    <string name="software_update_alert_summary">Play alert tone for software update notifications</string>
    <string name="double_tap">Double tap home launch</string>
    <string name="wifi_p2p_wifi_direct_enabled">Not visible to other non Wi-Fi Direct devices.</string>
    <string name="wifi_p2p_created_group">"Created Group, visible to all Wi-Fi capable devices.
WPA2 Password: %1$s"</string>
    <string name="wifi_p2p_group_owner_available">Group Owner is available</string>
    <string name="wifi_p2p_menu_pbc">WPS Push Button</string>
    <string name="wifi_p2p_menu_pin_display">WPS Pin Show</string>
    <string name="wifi_p2p_menu_pin_entry">WPS Pin Entry</string>
    <string name="wifi_p2p_wps_onstart_pbc">Press the Wi-Fi Protected Setup button or select connect option on other Wi-Fi capable device.</string>
    <string name="wifi_p2p_wps_onstart_pin">Enter pin %1$s on other Wi-Fi capable device. The setup can take upto two minutes to complete.</string>
    <string name="wifi_p2p_wps_complete">WPS succeeded. The other device connected to network.</string>
    <string name="wifi_p2p_wps_pin_incorrect_error">The WPS pin you typed is not correct.</string>
    <string name="wifi_p2p_go_creation_failed">Group creation failed</string>
    <string name="wifi_p2p_overlap_detected">Another WPS session was detected. Please try again in a few minutes.</string>
    <string name="wifi_p2p_go_creation">Select or Create new group</string>
    <string name="wifi_p2p_create_new_group">Create new group</string>
    <string name="wifi_p2p_auto_connect">Auto connect remembered Wi-Fi Direct groups</string>
    <string name="wifi_p2p_auto_connect_text">Wi-Fi Direct auto connect will impact battery life.</string>
    <string name="wifi_p2p_menu_configure_rename">Configure device</string>
    <string name="wifi_p2p_ago_band">Autonomous Group Broadcast Band</string>
    <string name="wifi_p2p_device_limit">Limit number of Wi-Fi Direct devices to improve performance</string>
    <string name="wifi_p2p_inactivity_timeout">Wi-Fi Direct Inactivity timeout</string>
    <string name="wifi_sim_slot">Select SIM</string>
    <string name="audioeffects_title">Audio Effects</string>
    <string name="wifi_ap_startup_warning_text">"This application will impact battery life significantly. You may want to run this application with the charger connected.

"<b>SECURITY WARNING:</b>"This device allows you to create a wireless network. Wireless network connections may be accessible by unauthorized users. Please read reference user manual to learn how to protect your network.

 If Wi-Fi is on, it will be turned off when you start Mobile Hotspot service. When you end Mobile Hotspot service, Wi-Fi will be turned back on."</string>
    <string name="wifi_ap_startup_warn_again">Do not remind me again</string>
    <string name="tether_additional_cost_warning_message">This could generate some additional costs.</string>
    <string name="wifi_ap_startup_title">Warning</string>
    <string name="tether_startup_title">@string/wifi_ap_startup_title</string>
    <string name="erase_personal_content_message">Erase all personalized content shipped with your device, including custom wallpaper, ringtones and power-up graphic</string>
    <string name="settings_title_in_demo_mode">Settings (Demo Mode)</string>
    <string name="manage_networks_category">Manage Networks</string>
    <string name="wifi_manage_networks">Manage networks options</string>
    <string name="wifi_manage_networks_summary">Networks that you have previously connected. To conserve battery, delete unnecessary networks from the list.</string>
    <string name="master_clear_password">Password:</string>
    <string name="master_clear_dialog_title">Type the password</string>
    <string name="master_clear_dialog_msg">Under demo mode, password is needed to do factory reset.</string>
    <string name="master_clear_wrong_password">The password you entered is not correct.</string>
    <string name="lockpassword_password_not_allow_simple_numeric_password">PIN must not be repetitious (1111) or sequential (1234).</string>
    <string name="lockpassword_password_not_allow_simple_alphabetic_password">Password must not be repetitious (aaaa) or sequential (abcd).</string>
    <string name="nfc_terms_of_service_title">About NFC</string>
    <string name="nfc_notice_title">NFC</string>
    <string name="nfc_notice_summary">Enabling NFC will allow for data exchange when you touch another NFC device. Make sure you know and trust with whom you are exchanging information as it may be accessible to third parties.</string>
    <string name="nfc_notice_link">Learn more about NFC</string>
    <string name="nfc_usr_confirm">Do you want to enable NFC?</string>
    <string name="nfc_notice_cancel">No</string>
    <string name="nfc_notice_ok">Yes</string>
    <string name="nfc_notice_checkbox">Never ask this again</string>
    <string name="sync_none" />
    <string name="accessibility_sync_none" />
    <string name="usb_tethering_restricted_subtext">USB tethering is restricted</string>
    <string name="wifi_sprint_disable">WIFI disabled by service provider DeviceManagement</string>
    <string name="wifi_ap_sprint_disable">HOTSPOT disabled by service provider DeviceManagement</string>
    <string name="settings_available_license_activity_title">Available open source licenses</string>
    <string name="wifi_tether_settings_text">Mobile Hotspot settings</string>
    <string name="wifi_tether_settings_subtext">Set up &amp; manage Mobile Hotspot</string>
    <string name="wifi_incorrect_password_error">The password you entered is incorrect. Please confirm your password is correct and try again.</string>
    <string name="wifi_ap_wps_title">One Touch Connect</string>
    <string name="full_charge_notification_title">Battery full notification</string>
    <string name="full_charge_notification_summary_on">Enable charging complete notification sounds (not applicable for USB charger)</string>
    <string name="full_charge_notification_summary_off">Disable charging complete notification sounds (not applicable for USB charger)</string>
    <string name="wifi_display_settings_title">Wireless display</string>
    <string name="wifi_password">Password</string>
    <string name="wifi_show_password">Show password</string>
    <string name="wifi_tether_checkbox_text">Mobile Hotspot</string>
    <string name="sound_settings">Sound</string>
    <string name="ringtone_title">Phone ringtone</string>
    <string name="all_volume_title">Volumes</string>
    <string name="musicfx_title">Music effects</string>
    <string name="notification_sound_title">Default notification sound</string>
    <string name="notification_pulse_title">Pulse notification light</string>
    <string name="notification_sound_dialog_title">Default notification sound</string>
    <string name="dtmf_tone_enable_title">Dial pad touch tones</string>
    <string name="sound_effects_enable_title">Touch sounds</string>
    <string name="lock_sounds_enable_title">Screen lock sound</string>
    <string name="haptic_feedback_enable_title">Vibrate on touch</string>
    <string name="vibrate_when_ringing_title">Vibrate when ringing</string>
    <string name="display_settings">Display</string>
    <string name="accelerometer_title">Auto-rotate screen</string>
    <string name="brightness">Brightness</string>
    <string name="screen_timeout">Sleep</string>
    <string name="screen_timeout_summary">After %1$s of inactivity</string>
    <string name="wallpaper_settings_title">Wallpaper</string>
    <string name="screensaver_settings_title">Daydream</string>
    <string name="title_font_size">Font size</string>
    <string name="summary_font_size">%1$s</string>
    <string name="dialog_title_font_size">Font size</string>
    <string name="usb_tethering_button_text">USB tethering</string>
    <string name="bluetooth_tether_checkbox_text">Bluetooth tethering</string>
    <string name="display_task_button_behavior_preference_title">Use long press for menu</string>
    <string name="display_task_button_behavior_summary">Hide on-screen menu button and access menu with long press of task key</string>
    <string name="emergency_tone_title">Emergency tone</string>
    <string name="sound_category_call_ringtone_vibrate_title">Call ringtone &amp; vibrate</string>
    <string name="sound_category_system_title">System</string>
</resources>