<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/sound_settings" android:key="sound_settings"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
    <com.android.settings.RingerVolumePreference android:persistent="false" android:title="@string/all_volume_title" android:key="ring_volume" android:dialogTitle="@string/all_volume_title" android:streamType="ring" />
    <Preference android:title="@string/musicfx_title" android:key="musicfx">
        <intent android:targetPackage="com.android.musicfx" android:targetClass="com.android.musicfx.ControlPanelPicker" />
    </Preference>
    <PreferenceCategory android:title="@string/sound_category_call_ringtone_vibrate_title" android:key="category_calls_and_notification" />
    <com.android.settings.DefaultRingtonePreference android:persistent="false" android:title="@string/ringtone_title" android:key="ringtone" android:dialogTitle="@string/ringtone_title" android:ringtoneType="ringtone" />
    <CheckBoxPreference android:persistent="false" android:title="@string/vibrate_when_ringing_title" android:key="vibrate_when_ringing" />
    <PreferenceCategory android:title="@string/sound_category_system_title" />
    <com.android.settings.DefaultRingtonePreference android:persistent="false" android:title="@string/notification_sound_title" android:key="notification_sound" android:dialogTitle="@string/notification_sound_dialog_title" android:ringtoneType="notification" />
    <CheckBoxPreference android:title="@string/dtmf_tone_enable_title" android:key="dtmf_tone" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/sound_effects_enable_title" android:key="sound_effects" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/lock_sounds_enable_title" android:key="lock_sounds" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/haptic_feedback_enable_title" android:key="haptic_feedback" android:defaultValue="true" />
    <ListPreference android:entries="@array/emergency_tone_entries" android:title="@string/emergency_tone_title" android:key="emergency_tone" android:entryValues="@array/emergency_tone_values" />
    <CheckBoxPreference android:title="@string/call_connect_tone_enable_title" android:key="call_connect_tone" android:summary="@string/call_connect_tone_enable_summary" android:defaultValue="false" />
    <CheckBoxPreference android:title="@string/network_lost_tone_enable_title" android:key="network_lost_tone" android:summary="@string/networks_lost_tone_summary" android:defaultValue="false" />
    <CheckBoxPreference android:title="@string/enhanced_roaming_tone_enable_title" android:key="eri_alert_sounds" android:summary="@string/enhanced_roaming_tone_enable_summary" android:defaultValue="false" />
    <CheckBoxPreference android:title="@string/software_update_alert_title" android:key="software_update_alert" android:summary="@string/software_update_alert_summary" android:defaultValue="false" />
    <CheckBoxPreference android:title="@string/full_charge_notification_title" android:key="full_charge_notification" android:defaultValue="true" android:summaryOn="@string/full_charge_notification_summary_on" android:summaryOff="@string/full_charge_notification_summary_off" />
</PreferenceScreen>