<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:persistent="false" android:title="@string/usb_tethering_button_text" android:key="usb_tether_settings" />
    <CheckBoxPreference android:persistent="false" android:title="@string/wifi_tether_checkbox_text" android:key="enable_wifi_ap" />
    <PreferenceScreen android:title="@string/wifi_ap_wps_title" android:key="wifi_ap_one_touch_connect">
        <intent android:targetPackage="com.android.settings" android:action="android.net.wifi.PBC_INITIATE" android:targetClass="com.android.settings.wifi.WifiApManageDevices" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/wifi_tether_settings_text" android:key="wifi_ap_settings" android:summary="@string/wifi_tether_settings_subtext">
        <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.wifi.WifiApSettings" />
    </PreferenceScreen>
    <CheckBoxPreference android:persistent="false" android:title="@string/bluetooth_tether_checkbox_text" android:key="enable_bluetooth_tethering" />
</PreferenceScreen>